# solana-dapp-template

./: .env.example  .gitignore  Anchor.toml  HACKATHON.md  README.md  TEMPLATE.md  Target.md  check-syntax.sh  package-lock.json  package.json
app/: index.html  package.json
app/src/: App.css  App.tsx  vite-env.d.ts
app/src/components/: Header.tsx
app/src/contexts/: SolanaProvider.tsx
app/src/types/: index.ts
app/src/utils/: solana.ts
docs/: API.md  ARCHITECTURE.md
programs/anchor-20250808/: Cargo.toml
programs/anchor-20250808/src/: errors.rs  lib.rs  state.rs
programs/anchor-20250808/src/instructions/: initialize.rs  update.rs
programs/token-economics/: Cargo.toml  README.md
programs/token-economics/src/: lib.rs
programs/token-economics/src/context/: mod.rs
programs/token-economics/src/errors/: mod.rs
programs/token-economics/src/events/: mod.rs
programs/token-economics/src/instructions/: admin.rs  initialize.rs  mod.rs  rewards.rs  stake.rs
programs/token-economics/src/state/: mod.rs
programs/token-economics/src/utils/: mod.rs
scripts/: deploy.sh  rename-project.sh  setup.sh
tests/: anchor-20250808.ts  token-economics.ts
